[workspace]
resolver = "2"
exclude = ["examples/rust"]
members = [
  "api/test",
  "tools/tvm_api_gen",
  "tools/update_trusted_blocks",
  "tools/tl_code_gen",
  "tvm_abi",
  "tvm_api",
  "tvm_assembler",
  "tvm_block",
  "tvm_block_json",
  "tvm_cli",
  "tvm_client",
  "tvm_client_processing",
  "tvm_common",
  "tvm_debugger",
  "tvm_executor",
  "tvm_sdk",
  "tvm_struct",
  "tvm_tl_codegen",
  "tvm_types",
  "tvm_vm",
]
[workspace.package]
version = "2.24.17"

rust-version = "1.76.0"

authors = ["TVM Labs <hello@tvmlabs.io>"]
repository = "https://github.com/tvmlabs/tvm-sdk"
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[workspace.lints.rust]
# aim to have fmt::Debug implemented for all our public types
missing_debug_implementations = "warn"

[profile.profiling]
debug = 1
inherits = 'release'

[profile.dev]
# Tests require unwind; keeping dev on unwind avoids profile mismatches in `cargo test`.
panic = "unwind"
# Enable only a small amount of optimization in debug mode
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "unwind"  # Keep release-test builds compatible with the test harness.
strip = true      # Automatically strip symbols from the binary.

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
blst = "0.3"
byteorder = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crc = "3"
diffy = "0.4"
dirs = "6"
ed25519 = "2"
ed25519-dalek = "2"
extfmt = "0.2"
failure = "0.1.8"
futures = "0.3"
hex = "0.4"
hex-literal = "1"
json5 = "1"
lazy_static = "1"
lockfree = { git = "https://github.com/tvmlabs/lockfree" }
log = "0.4"
num = "0.4"
num-bigint = "0.4"
num-derive = "0.4"
num-traits = "0.2"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
] }
semver = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1"
sha2 = "0.10"
similar = "2"
smallvec = "1"
thiserror = "2"
tokio = { default-features = false, version = "1" }
wasmtime = "36"
wasmtime-wasi = "36"
wasmtime-wasi-io = "36"
zstd = "0.13"
#
tvm_abi = { path = "./tvm_abi" }
tvm_api = { path = "./tvm_api" }
tvm_assembler = { path = "./tvm_assembler" }
tvm_block = { path = "./tvm_block" }
tvm_block_json = { path = "./tvm_block_json" }
tvm_cli = { path = "./tvm_cli" }
tvm_client = { path = "./tvm_client", default-features = false }
tvm_client_processing = { path = "./tvm_client_processing" }
tvm_debugger = { path = "./tvm_debugger" }
tvm_executor = { path = "./tvm_executor", default-features = false }
tvm_sdk = { path = "./tvm_sdk" }
tvm_struct = { path = "./tvm_struct" }
tvm_types = { path = "./tvm_types" }
tvm_vm = { path = "./tvm_vm", default-features = false }
url = "2"
#
bincode = "1"
criterion = "0.5"
log4rs = "1"
pretty_assertions = "1"

[workspace.dependencies.tokio-tungstenite]
version = "0.28"
