[workspace]
resolver = "2"
exclude = ["examples/rust"]
members = [
  "api/test",
  "tools/tvm_api_gen",
  "tools/update_trusted_blocks",
  "tools/tl_code_gen",
  "tvm_abi",
  "tvm_api",
  "tvm_assembler",
  "tvm_block",
  "tvm_block_json",
  "tvm_cli",
  "tvm_client",
  "tvm_client_processing",
  "tvm_common",
  "tvm_debugger",
  "tvm_executor",
  "tvm_sdk",
  "tvm_struct",
  "tvm_tl_codegen",
  "tvm_types",
  "tvm_vm",
]
[workspace.package]
version = "3.0.0"

rust-version = "1.76.0"

authors = ["TVM Labs <hello@tvmlabs.io>"]
repository = "https://github.com/tvmlabs/tvm-sdk"
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[workspace.lints.rust]
# aim to have fmt::Debug implemented for all our public types
missing_debug_implementations = "warn"

[profile.profiling]
debug = 1
inherits = 'release'

[profile.dev]
# Tests require unwind; keeping dev on unwind avoids profile mismatches in `cargo test`.
panic = "unwind"
# Enable only a small amount of optimization in debug mode
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "unwind"  # Keep release-test builds compatible with the test harness.
strip = true      # Automatically strip symbols from the binary.

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
blst = "0.3"
byteorder = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crc = "3"
diffy = "0.4"
dirs = "6"
ed25519 = "2"
ed25519-dalek = "2"
extfmt = "0.2"
futures = "0.3"
hex = "0.4"
hex-literal = "1"
json5 = "1"
lazy_static = "1"
lockfree = { git = "https://github.com/tvmlabs/lockfree" }
log = "0.4"
num = "0.4"
num-bigint = "0.4"
num-derive = "0.4"
num-traits = "0.2"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
semver = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1"
sha2 = "0.10"
similar = "2"
smallvec = "1"
thiserror = "2"
tokio = { default-features = false, version = "1" }
wasmtime = "36"
wasmtime-wasi = "36"
wasmtime-wasi-io = "36"
zstd = "0.13"
#
tvm_abi = { path = "./tvm_abi" }
tvm_api = { path = "./tvm_api" }
tvm_assembler = { path = "./tvm_assembler" }
tvm_block = { path = "./tvm_block" }
tvm_block_json = { path = "./tvm_block_json" }
tvm_cli = { path = "./tvm_cli" }
tvm_client = { path = "./tvm_client", default-features = false }
tvm_client_processing = { path = "./tvm_client_processing" }
tvm_debugger = { path = "./tvm_debugger" }
tvm_executor = { path = "./tvm_executor", default-features = false }
tvm_sdk = { path = "./tvm_sdk" }
tvm_struct = { path = "./tvm_struct" }
tvm_types = { path = "./tvm_types" }
tvm_vm = { path = "./tvm_vm", default-features = false }
url = "2"
#
bincode = "1"
criterion = "0.5"
log4rs = "1"
pretty_assertions = "1"

[workspace.dependencies.tokio-tungstenite]
version = "0.28"

# --- Halo2 backend unification (ZKHALO2VERIFYWITHVK + VkBlob-v2 "Rlc" shape) ---
#
# The whole graph must share ONE halo2-base / halo2-ecc / zkevm-hashes / halo2-axiom
# instance, otherwise the `VerifyingKey<G1Affine>` produced by axiom-eth's
# EthCircuitImpl is a *different type* from the one the opcode handler reconstructs
# and nothing type-checks.
#
# halo2-base reaches the graph through THREE original sources — gosh-zk-snark-halo2-utils
# and tvm_vm pull it from the gosh fork git, while axiom-eth + snark-verifier-sdk pull
# it (and halo2-ecc / zkevm-hashes) from axiom's halo2-lib git. Patching all of them to
# the SAME git url+rev makes cargo dedup them into one package (a shared local *path*
# cannot patch multiple sources — cargo then keeps the original for the loser, yielding
# two halo2-base copies).
#
# The fork is hosted at `github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381`
# on branch `bump-halo2-lib-v0.4.1` (halo2-base 0.4.1 / zkevm-hashes 0.2.1 — the version
# axiom-eth v0.4.3 builds against, kept stable-Rust-compatible). The branch sits one
# commit ahead of `main` (commit `26b3224`, "Bump fork to axiom halo2-lib v0.4.1 /
# zkevm-hashes 0.2.1"); `main` lacks the v0.4.1 API surface axiom-eth needs.
# NOTE: editing the fork requires a commit + `cargo update` to refetch.
[patch.crates-io]
halo2-base = { git = "https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381", branch = "bump-halo2-lib-v0.4.1" }

halo2-axiom = { git = "https://github.com/gosh-sh/halo2-axiom", branch = "main" }

# tvm_vm + gosh-zk-snark-halo2-utils pull halo2-base from this git source.
[patch."https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381"]
halo2-base = { git = "https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381", branch = "bump-halo2-lib-v0.4.1" }

# axiom-eth + snark-verifier-sdk pull halo2-base / halo2-ecc / zkevm-hashes from here.
[patch."https://github.com/axiom-crypto/halo2-lib.git"]
halo2-base = { git = "https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381", branch = "bump-halo2-lib-v0.4.1" }
halo2-ecc = { git = "https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381", branch = "bump-halo2-lib-v0.4.1" }
zkevm-hashes = { git = "https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381", branch = "bump-halo2-lib-v0.4.1" }

# axiom-eth: fork carrying a one-line patch (RlcManager names
# `VirtualRegionManager::Assignment` explicitly) so it builds against the
# gosh halo2-base fork above. Hosted at `github.com/gosh-sh/axiom-eth`,
# branch `gosh-stable-rlcmanager-assignment` (one commit `687a6da` ahead of
# upstream axiom-crypto/axiom-eth `main`).
[patch."https://github.com/axiom-crypto/axiom-eth"]
axiom-eth = { git = "https://github.com/gosh-sh/axiom-eth", branch = "gosh-stable-rlcmanager-assignment" }
