[package]
name = "tvm_abi"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
byteorder.workspace = true
chrono.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
#
tvm_block.workspace = true
tvm_types.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
