[package]
name = "tvm_abi"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
byteorder = '1.3.2'
chrono.workspace = true
failure.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_derive = '1.0.91'
serde_json.workspace = true
thiserror.workspace = true
tvm_block.workspace = true

[dev-dependencies]
pretty_assertions = '1.3'

