[package]
name = "tvm_api"
description = "Minimal wrappers for TVM serialization using TL-schema"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
extfmt.workspace = true
failure.workspace = true
hex.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
#
tvm_block.workspace = true
tvm_types.workspace = true

ordered-float = "4.2.0"
secstr = "0.5.1"

[build-dependencies]
serde_json.workspace = true
tvm_tl_codegen = { path = "../tvm_tl_codegen", features = ["reformat"] }

[features]
bytes_as_vec = []
