[package]
name = "tvm_assembler"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { features = ["derive"], workspace = true }
failure.workspace = true
hex.workspace = true
log.workspace = true
num.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
num-bigint.workspace = true

ed25519-dalek.workspace = true
rand.workspace = true

tvm_types.workspace = true
tvm_vm = { workspace = true }

base64 = "0.13"
log4rs = '1.2'
fastcrypto = "0.1.8"
ark-std = "0.4.0"
ark-ff = "0.4.2"
base64ct = { version = "1.5.3", features = ["alloc"] }

[features]
default = ["gosh"]
gosh = []
