[package]
name = "tvm_assembler"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { features = ["derive"], workspace = true }
hex.workspace = true
log.workspace = true
num.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
num-bigint.workspace = true

ed25519-dalek.workspace = true
rand.workspace = true

tvm_types.workspace = true
tvm_vm = { workspace = true }


[features]
default = ["gosh"]
gosh = []
