[package]
name = "tvm_block"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
crc.workspace = true
ed25519.workspace = true
ed25519-dalek.workspace = true
failure.workspace = true
hex.workspace = true
log.workspace = true
num.workspace = true
num-traits.workspace = true
sha2.workspace = true
thiserror.workspace = true
blake3 = { version = "1.8.2" }
#
tvm_types.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"

[features]
default = ["gosh"]
gosh = []
signature_with_id = []
ci_run = []
