[package]
name = "tvm_block_json"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
failure.workspace = true
hex.workspace = true
lazy_static.workspace = true
log.workspace = true
num.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
#
tvm_api.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true

metrics = "0.22"

[dev-dependencies]
pretty_assertions = "1.4.0"
