[package]
description = "command line tool for TVM compatible blockchains"
documentation = "https://www.tvmlabs.io"
edition = "2021"
homepage = "https://www.tvmlabs.io"
keywords = [
    #
    "TVM",
    "SDK",
    "smart contract",
    "tvmlabs",
    "solidity",
]
name = "tvm-cli"
readme = "README.md"
repository = "https://github.com/tvmlabs/tvm-cli"
version = "0.39.0"

[profile.profiling]
debug = 1
inherits = 'release'

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"
# Enable only a small amount of optimization in debug mode
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap = "2"
futures.workspace = true
hex.workspace = true
indicatif = "0.17.7"
log = { workspace = true, features = ["std"] }
num-bigint.workspace = true
num-traits.workspace = true
qr2term = "0.3.1"
regex.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde = { features = ["derive"], version = "1.0.196" }
serde_derive.workspace = true
serde_json.workspace = true
simplelog = "0.12.1"
thiserror.workspace = true
tokio = { features = ["full"], workspace = true }
tokio-retry = "0.3.0"
url = "2.5.0"
#
tvm_abi.workspace = true
tvm_assembler.workspace = true
tvm_block.workspace = true
tvm_block_json.workspace = true
tvm_client = { workspace = true, features = ["std", "rustls-tls-webpki-roots"] }
tvm_executor.workspace = true
tvm_sdk.workspace = true
tvm_types.workspace = true
tvm_vm.workspace = true

[dev-dependencies]
assert_cmd = "2.0.13"
lazy_static = "1.4.0"
predicates = "3.1.0"
string-error = "0.1.0"

[[bin]]
name = "tvm-cli"
path = "src/main.rs"

[[bin]]
name = "__tvm-cli_completion"
path = "src/completion.rs"
