[package]
description = "command line tool for TVM compatible blockchains"
documentation = "https://www.tvmlabs.io"
homepage = "https://www.tvmlabs.io"
keywords = [
  #
  "TVM",
  "SDK",
  "smart contract",
  "tvmlabs",
  "solidity",
]
name = "tvm_cli"
readme = "README.md"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap = "3"
futures.workspace = true
hex.workspace = true
indicatif = "0.17"
lazy_static.workspace = true
log = { workspace = true, features = ["std"] }
num-bigint.workspace = true
num-traits.workspace = true
qr2term = "0.3"
regex.workspace = true
reqwest.workspace = true
serde = { features = ["derive"], workspace = true }
serde_derive.workspace = true
serde_json.workspace = true
simplelog = "0.12"
thiserror.workspace = true
tokio = { features = ["full"], workspace = true }
tokio-retry = "0.3"
url.workspace = true
#
tvm_abi.workspace = true
tvm_assembler.workspace = true
tvm_block.workspace = true
tvm_block_json.workspace = true
tvm_client = { workspace = true, features = ["std", "rustls-tls-webpki-roots"] }
tvm_executor.workspace = true
tvm_sdk.workspace = true
tvm_types.workspace = true
tvm_vm.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
string-error = "0.1"

[[bin]]
name = "tvm-cli"
path = "src/main.rs"

[[bin]]
name = "__tvm-cli_completion"
path = "src/completion.rs"
