[package]
name = "tvm_client"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

[dependencies]
api_derive = { path = "../api/derive" }
api_info = { path = "../api/info" }
tvm_client_processing.workspace = true
tvm_sdk.workspace = true

tvm_abi.workspace = true
tvm_block.workspace = true
tvm_block_json.workspace = true
tvm_executor = { workspace = true, optional = true, features = [
  "signature_with_id",
] }
tvm_struct.workspace = true
tvm_types.workspace = true
tvm_vm = { workspace = true, optional = true, features = [
  "signature_with_id",
  "signature_no_check",
] }

lockfree.workspace = true
sodalite = { git = "https://github.com/tvmlabs/sodalite" }

aes = "0.8"
anyhow.workspace = true
async-trait.workspace = true
base58 = "0.2"
base64.workspace = true
bincode.workspace = true
byteorder.workspace = true
cbc = "0.1"
chacha20 = "0.9"
chrono.workspace = true
crc.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
hmac = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
lazy_static.workspace = true
log.workspace = true
lru = "0.16"
num-bigint.workspace = true
num-derive.workspace = true
num-traits.workspace = true
pbkdf2 = { default-features = false, version = "0.12" }
rand.workspace = true
regex.workspace = true
scrypt = { default-features = false, version = "0.11" }
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiny-bip39 = "2"
tokio = { features = ["sync"], workspace = true }
tokio-stream = "0.1"
zeroize = { features = ["zeroize_derive"], version = "1" }

# optional
zstd = { workspace = true, optional = true }

# optional for std
reqwest = { features = ["cookies"], workspace = true, optional = true }
tokio-tungstenite = { optional = true, workspace = true }
url.workspace = true

# optional for wasm
indexed_db_futures = { default-features = false, optional = true, version = "0.4" }
js-sys = { optional = true, version = "0.3" }
wasm-bindgen = { optional = true, version = "0.2" }
wasm-bindgen-futures = { optional = true, version = "0.4" }

[dependencies.home]
optional = true
version = "0.5"

[dependencies.web-sys]
features = [
  "ErrorEvent",
  "FileReader",
  "Headers",
  "MessageEvent",
  "ProgressEvent",
  "Request",
  "RequestInit",
  "Response",
  "Window",
  "WebSocket",
]
optional = true
version = "0.3"

[dev-dependencies]
async-std = { features = ["attributes"], version = "1" }
axum = "0.8"
if-addrs = "0.15"
dirs.workspace = true
graphql-parser = "0.4"
hyper = "1"
log4rs.workspace = true
mockall = "0.14"
pretty_assertions.workspace = true


[features]
api_info = []
default = ["std", "rustls-tls-webpki-roots", "api_info"]
include-zstd = ["tvm_block/gosh", "tvm_vm/gosh"]
std = [
  "dep:reqwest",
  "dep:tokio-tungstenite",
  "tokio/rt-multi-thread",
  "tokio/macros",
  "tokio/time",
  "tokio/net",
  "tokio/fs",
  "home",
  "include-zstd",
  "zstd",
  "tvm_vm/default",
  "tvm_executor/default",
  "tvm_block_json/metrics",
]
native-tls = [
  "dep:reqwest",
  "dep:tokio-tungstenite",
  "reqwest/native-tls",
  "tokio-tungstenite/native-tls",
]
native-tls-vendored = [
  "dep:reqwest",
  "dep:tokio-tungstenite",
  "reqwest/native-tls-vendored",
  "tokio-tungstenite/native-tls-vendored",
]
rustls-tls-native-roots = [
  "dep:reqwest",
  "dep:tokio-tungstenite",
  "reqwest/rustls",
  "tokio-tungstenite/rustls-tls-native-roots",
]
rustls-tls-webpki-roots = [
  "dep:reqwest",
  "dep:tokio-tungstenite",
  "reqwest/rustls",
  "tokio-tungstenite/rustls-tls-webpki-roots",
]
wasm = ["wasm-base", "include-zstd", "zstd", "zstd/thin", "zstd/wasm"]
wasm-base = [
  "chrono/wasmbind",
  "indexed_db_futures",
  "js-sys",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "web-sys",
]

# NOTE: supposed to be the same as "wasm" but for now
# we don't support wasm contracts in the browser
wasm_web = ["wasm-base", "tvm_vm/wasm_web", "tvm_executor/wasm_web"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-sign-ext",
  "--strip-debug",
  "--strip-producers",
]
