[package]
name = "tvm_common"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
failure.workspace = true
external-ip.workspace = true
log.workspace = true
log4rs = { version = "1.2.0" }
serde_json.workspace = true
tokio.workspace = true
#
tvm_types.workspace = true
