[package]
name = "tvm_common"
#
version.workspace = true
rust-version.workspace = true
#
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
failure.workspace = true
log.workspace = true
log4rs.workspace = true
serde_json.workspace = true
tokio.workspace = true
#
tvm_types.workspace = true
